# ejr

./: CMakeLists.txt  README.md  todo.md
examples/: callbacks.cpp  consule_module.cpp  repl.cpp
include/: ejr.h  ejr.hpp  ejr_console.hpp  ejr_error.hpp
js/: console.js  include_console.h
lib/: quickjs.c  quickjs_config.h  quickjs_cpp_utils.hpp
scripts/: add_tests.py  classes.ej  download_qjs.ej  include_js.py  intention.ej  intention.js  run_tests.py
src/: ejr.cpp  ejr_c_api.cpp  ejr_c_api.h  ejr_cpp_api.cpp  main.cpp  utils.cpp  utils.hpp
stdlib/: ejr_console.cpp  ejr_console.hpp
tests/: test_c_main.c  test_c_repl.c  test_eval.c  test_eval_module.c  test_eval_script.c  test_to_string.c
